<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_phone_content"
            android:title="@string/vk_menu_bottom_navigation_phone_content"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/vk_menu_bottom_navigation_search"/>

    <item
            android:id="@+id/navigation_obl"
            android:icon="@drawable/ic_obl"
            android:title="@string/vk_menu_bottom_navigation_obl"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_24dp"
            android:title="@string/vk_menu_bottom_navigation_notifications"/>

    <item
            android:id="@+id/navigation_menu"
            android:icon="@drawable/ic_menu_24dp"
            android:title="@string/vk_menu_bottom_navigation_menu"/>

</menu>